- Any jsonizable object can now be used in a string context JSON literal
- Fixed AbstractMethodError
- Serialize empty arrays and objects without newlines
- Split out generic data package