@@ -2,3 +2,5 @@
 - Fixed AbstractMethodError
 - Serialize empty arrays and objects without newlines
 - Split out generic data package
+- Formatters have been introduced
+- `serialize` method has been removed in favor of `format` method, plus formatters
